--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://paulmartin91.github.io/paulmartin91.github.io",
+  "homepage": "https://github.com/paulmartin91/paulmartin91.github.io",
   "dependencies": {
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
